Bug fixes, and next release.