@@ -1,5 +1,5 @@
 group 'tiddle'
-version '2.0'
+version '2.1'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
@@ -16,26 +16,11 @@ repositories {
     mavenCentral()
 }
 
-// Declares binary plugin and its required JavaFX classpath
-//apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin"
-
-// Configures plugin
-//javafx {
-//    // Points to JDK and its JavaFX libraries, also declares target runtime JDK
-//    javaRuntime = '/Library/Java/JavaVirtualMachines/jdk1.8.0_60.jdk'
-//
-//    // Application name and ID presented by target OS
-//    appID 'Tiddle'
-//    appName 'Tiddle'
-//
-//    // Main class of application
-//    mainClass 'tiddle.javafx.Main'
-//
-//    // JVM arguments, system properties, application command line arguments
-//    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
-//    systemProperties = ['prism.disableRegionCaching':'true']
-//    arguments = ['-l', '--fast']
-//}
+shadowJar {
+    manifest {
+        attributes 'Main-Class': 'tiddle.javafx.Main'
+    }
+}
 
 dependencies {
     compile "org.apache.lucene:lucene-core:2.4.1"
@@ -47,8 +32,4 @@ dependencies {
     compile "com.github.tulskiy:jkeymaster:1.2"
 
     testCompile "junit:junit:4.4"
-}
-
-String getProjectProperty(String propertyName) {
-    project.hasProperty(propertyName) ? project.property(propertyName) : null
 }
